--- a/BHReact/PartI/package.json
+++ b/BHReact/PartI/package.json
@@ -18,5 +18,9 @@
     "eslint-plugin-prettier": "^2.6.2",
     "parcel-bundler": "^1.10.3",
     "prettier": "^1.14.3"
+  },
+  "dependencies": {
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   }
 }
