--- a/BHReact/PartI/package.json
+++ b/BHReact/PartI/package.json
@@ -2,7 +2,7 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "src/App.js",
   "scripts": {
     "lint": "eslint **/*.{js,jsx} --quiet",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "parcel-bundler": "^1.10.3",
-    "prettier": "^1.14.3"
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.3.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "parcel-bundler": "^1.9.7",
+    "prettier": "^1.14.2"
   },
   "dependencies": {
     "react": "^16.6.0",
