Add Reach router, still need to add paths to each object rendered

--- a/BHREACT_/ROOT/package.json
+++ b/BHREACT_/ROOT/package.json
@@ -24,6 +24,7 @@
     "prettier": "^1.14.3"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "dotenv": "^6.1.0",
     "petfinder-client": "0.0.3",
     "react": "^16.6.0",
