--- a/ReactGraphQL/GraphQLMock/users/package.json
+++ b/ReactGraphQL/GraphQLMock/users/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.3",
-    "json-server": "^0.15.0",
-    "lodash": "^4.17.15"
+    "json-server": "^0.15.1",
+    "lodash": "^4.17.15",
+    "nodemon": "^1.19.2"
   }
 }
