--- a/ReactV5/package.json
+++ b/ReactV5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactV5",
+  "name": "react-v5",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,8 +13,12 @@
   "author": "Andres Arias",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.18.2"
   },
